--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,9 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".activity.main.MainActivity"
-            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
-            android:label="@string/app_name"
-            android:launchMode="singleInstance"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".activity.splashScreen.Splash"
+            android:theme="@style/splashTheme"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -29,10 +27,12 @@
                 android:resource="@xml/shortcuts" />
         </activity>
         <activity android:name=".activity.BaseActivity" />
+
+        <activity android:name=".activity.main.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".activity.settingActivity.SettingsActivity"
             android:label="@string/action_more_setting"
-            android:launchMode="singleInstance"
             android:theme="@style/AppTheme" />
         <activity
             android:name=".activity.sendFeedback.SendFeedback"
